WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159465
[GTK][Threaded Compositor] Web view background colors don't work
https://bugs.webkit.org/show_bug.cgi?id=159465
Summary
[GTK][Threaded Compositor] Web view background colors don't work
Carlos Garcia Campos
Reported
2016-07-06 05:31:23 PDT
Bug #159455
makes them work for GTK+ when not using the threaded compositor, but it's not enough for the threaded compositor.
Attachments
Patch
(6.71 KB, patch)
2016-07-07 03:36 PDT
,
Carlos Garcia Campos
mcatanzaro
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2016-07-07 03:36:14 PDT
Created
attachment 283004
[details]
Patch
Michael Catanzaro
Comment 2
2016-07-20 17:30:00 PDT
Comment on
attachment 283004
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=283004&action=review
> Source/WebKit2/Shared/CoordinatedGraphics/threadedcompositor/ThreadedCompositor.cpp:87 > + m_drawsBackground = drawsBackground;
This is fine as it is, but my style is to capture only protectedThis and use it explicitly in the lambda, instead of capturing both this and protectedThis. I'm not sure which style is more prevalent in WebKit code.
Carlos Garcia Campos
Comment 3
2016-07-21 00:21:39 PDT
(In reply to
comment #2
)
> Comment on
attachment 283004
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=283004&action=review
> > > Source/WebKit2/Shared/CoordinatedGraphics/threadedcompositor/ThreadedCompositor.cpp:87 > > + m_drawsBackground = drawsBackground; > > This is fine as it is, but my style is to capture only protectedThis and use > it explicitly in the lambda, instead of capturing both this and > protectedThis. I'm not sure which style is more prevalent in WebKit code.
There's no consensus last time we discussed it, some people (like me) prefer to also capture this to make the lambda body easier to read without having to use protectedThis-> everywhere.
Carlos Garcia Campos
Comment 4
2016-07-21 00:26:33 PDT
Committed
r203497
: <
http://trac.webkit.org/changeset/203497
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug